feat: implement password salting